--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notion-to-ssg",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Export Notion databases to Markdown files for static site generators like 11ty, with automatic image downloading and flexible configuration",
   "main": "src/index.js",
   "bin": {
@@ -34,7 +34,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ZeFish/notion-to-ssg.git"
+    "url": "git+https://github.com/ZeFish/notion-to-ssg.git"
   },
   "bugs": {
     "url": "https://github.com/ZeFish/notion-to-ssg/issues"
